Thu Jan  6 19:51:36 2005  Tim Janik  <timj@gtk.org>

	* bsewave.[hc]: keep inlined data handles opened, to protect against
	.bse file overwriting.

	* bsestorage.c (bse_storage_add_dblock): keep opened data handles
	open to protect against overwriting.

Thu Jan  6 18:37:16 2005  Tim Janik  <timj@gtk.org>

	* bsestorage.c: store/parse Ogg/Vorbis data handles as in compressed
	form, rather than unpacked.

	* bsewave.[hc]: removed wave chunk url structures which were unused
	anyway. store waves in order, sorted by oscillator frequency. use
	SfiRing to hold the list of wave chunks.

	* gsldatahandle-vorbis.[hc]: allow peeking of mix_freq from
	gsl_data_handle_new_ogg_vorbis_zoffset(). added convenience function
	gsl_vorbis1_handle_put_wstore().

	* gslloader-bsewave.c: use "vorbis-link" as keyword for inlined 
	Ogg/Vorbis streams. minor cleanups.

Wed Jan  5 01:10:54 2005  Tim Janik  <timj@gtk.org>

	* bseenums.[hc]: added BSE_ERROR_WRONG_N_CHANNELS.

	* gslloader-bsewave.c: make sure that chunks carry the required number
	of channels.

	* gsldatahandle-vorbis.c: pass on number of channels for
	gsl_data_handle_new_ogg_vorbis_zoffset() handles.

	* bsewave.c: slight warning fixup.

Mon Jan  3 23:59:39 2005  Tim Janik  <timj@gtk.org>

	* bsewave.header: document format changes.

	* gslloader-bsewave.c: rewrote parsing code, cleaned up token list,
	make use of xinfos. properly identify auto-detect and raw-sample files.

	* bseutils.[hc]: added bse_xinfos_parse_assignment().

	* gslloader.h: extended wave chunk data fields.

Sun Jan  2 14:41:59 2005  Tim Janik  <timj@gtk.org>

	* bsestorage.[hc]:
	bse_storage_put_xinfos(): save xinfo arrays.
	bse_storage_parse_xinfos(): load xinfo arrays.

	* bsewave.[hc]: cleanups, removed per-chunk locator logic. added 
	finalize, added bse_wave_clear(). save and parse xinfo strings.
	bse_wave_load_wave_file(): clear wave before loading, set locator
	after successfull loading.

	* bsewaverepo.proc: use bse_wave_load_wave_file().
